[package]
name = "audiopresence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies.windows]
version = "0.38.0"
features = [
    "alloc",
    "Media",
    "Foundation",
    "Media_Control"
]

[target.'cfg(unix)'.dependencies.mpris]
version = "1.1.2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.56"
